[package]
name = "unbug"
version = "0.4.0"
edition = "2021"
description = "A crate to programmatically invoke debugging breakpoints with helping macros"
repository = "https://github.com/greymattergames/unbug"
documentation = "https://docs.rs/unbug"
license = "MIT OR Apache-2.0"
keywords = ["debug", "debugging", "ensure", "assert", "breakpoint"]
authors = [
    "Brian Jesse <brian@greymattergames.net>",
    "Scott Girton <scott@greymattergames.net>",
]
categories = ["development-tools::debugging"]
exclude = [".vscode/", "assets/"]

[dependencies]
tracing = "0.1"
dbg_breakpoint = "0.1.1"

[features]
default = []
no_cache_debugger = []

[[example]]
name = "basic"
path = "examples/basic/"

[workspace]
members = [
    "examples/*",
]
