[package]
name = "unbug_macro"
description = "A proc macro for debug assertions from Unbug"
documentation = "https://docs.rs/unbug"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-error = "1.0"

[dependencies.syn]
version = "2.0"
features = [
    "visit",
    "visit-mut",
    "full",
]

